--- a/public/skin/frontend/rwd/default/css/styles.css
+++ b/public/skin/frontend/rwd/default/css/styles.css
@@ -1574,8 +1574,10 @@ span.weee {
 /* -------------------------------------------- *
  * Ratings
  */
-.ratings {
+.ratings, .rating-box {
   margin: 7px 0;
+  --star-rating__icon-active: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23de7921"><path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z" clip-rule="evenodd" /></svg>');
+  --star-rating__icon-inactive: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="%23de7921" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" /></svg>');
 }
 .ratings .rating-box,
 .ratings .rating-links {
@@ -1585,7 +1587,7 @@ span.weee {
   width: 65px;
   height: 13px;
   background-repeat: repeat-x;
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="%23999" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" /></svg>');
+  background-image: var(--star-rating__icon-inactive);
   background-size: 13px;
   overflow: hidden;
 }
@@ -1593,7 +1595,7 @@ span.weee {
   float: left;
   height: 13px;
   background-repeat: repeat-x;
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%230472ad" class="size-6"><path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z" clip-rule="evenodd" /></svg>');
+  background-image: var(--star-rating__icon-active);
   background-size: 13px;
   background-position: left;
 }
@@ -1603,6 +1605,51 @@ span.weee {
 }
 .ratings .rating-links .separator {
   margin: 0 3px;
+}
+.star-rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  --star-rating__icon-inactive: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="%23999"><path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" /></svg>');
+}
+
+.star-rating__value {
+  width: 0;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.star-rating__label {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0;
+  width: 24px;
+  height: 24px;
+}
+
+.star-rating__label:before {
+  content: var(--star-rating__icon-inactive);
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+}
+
+.star-rating__value:checked ~ .star-rating__label {
+  content: var(--star-rating__icon-active);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .star-rating__label:hover,
+  .star-rating__label:hover ~ .star-rating__label {
+    content: var(--star-rating__icon-active);
+  } 
+  .star-rating__value:checked + .star-rating__label:hover,
+  .star-rating__value:checked + .star-rating__label:hover ~ .star-rating__label,
+  .star-rating__value:checked ~ .star-rating__label:hover,
+  .star-rating__value:checked ~ .star-rating__label:hover ~ .star-rating__label,
+  .star-rating__label:hover ~ .star-rating__value:checked ~ .star-rating__label {
+    content: var(--star-rating__icon-active);
+  }
 }
 
 /* -------------------------------------------- *
@@ -7813,6 +7860,10 @@ div.paypal-logo span > img {
 .review-summary-table {
   border-bottom: 1px solid #cccccc;
   margin: 0 0 10px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 .review-summary-table thead {
   background: transparent;
