--- a/app/design/adminhtml/default/default/template/system/account/edit/form/js.phtml
+++ b/app/design/adminhtml/default/default/template/system/account/edit/form/js.phtml
@@ -1,3 +1,13 @@
+<?php
+/**
+ * Maho
+ *
+ * @category    design
+ * @package     default_default
+ * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ */
+?>
 <script type="text/javascript">
     function toggleTwoFactorSetup() {
         const select = document.getElementById('twofa_enabled');
