--- a/app/design/adminhtml/default/default/template/login.phtml
+++ b/app/design/adminhtml/default/default/template/login.phtml
@@ -21,9 +21,7 @@
     <link type="text/css" rel="stylesheet" href="<?= $this->getSkinUrl('login.css') ?>" media="all" />
     <link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
     <link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
-    <script type="text/javascript" src="<?= $this->getJsUrl('prototype/prototype.js') ?>"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl('validation.js') ?>"></script>
-    <script type="text/javascript" src="<?= $this->getJsUrl('mage/adminhtml/form.js') ?>"></script>
 </head>
 <body id="page-login">
     <div class="login-container">
@@ -35,26 +33,96 @@
                     <div id="messages">
                         <?= $this->getMessagesBlock()->toHtml() ?>
                     </div>
-                    <div class="input-box input-left">
-                        <label for="username"><?= Mage::helper('adminhtml')->__('User Name:') ?></label><br />
-                        <input type="text" id="username" name="login[username]" value="" class="required-entry input-text" autofocus="autofocus" />
+                    <div id="step1">
+                        <div class="input-box input-left">
+                            <label for="username"><?= Mage::helper('adminhtml')->__('User Name:') ?></label><br />
+                            <input type="text" id="username" name="login[username]" value="" class="required-entry input-text" autofocus="autofocus" autocomplete="username" />
+                        </div>
+                        <div class="input-box input-right">
+                            <label for="login"><?= Mage::helper('adminhtml')->__('Password:') ?></label><br />
+                            <input type="password" id="login" name="login[password]" value="" class="required-entry input-text" autocomplete="current-password" />
+                        </div>
+                        <?= $this->getChildHtml('form.additional.info') ?>
+                        <div class="clear"></div>
+                        <div class="form-buttons">
+                            <a class="left" href="<?= Mage::helper('adminhtml')->getUrl('adminhtml/index/forgotpassword', ['_nosecret' => true]) ?>"><?= Mage::helper('adminhtml')->__('Forgot your password?') ?></a>
+                            <input type="submit" class="form-button" value="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" />
+                        </div>
                     </div>
-                    <div class="input-box input-right">
-                        <label for="login"><?= Mage::helper('adminhtml')->__('Password:') ?></label><br />
-                        <input type="password" id="login" name="login[password]" value="" class="required-entry input-text" />
-                    </div>
-                    <?= $this->getChildHtml('form.additional.info') ?>
-                    <div class="clear"></div>
-                    <div class="form-buttons">
-                        <a class="left" href="<?= Mage::helper('adminhtml')->getUrl('adminhtml/index/forgotpassword', ['_nosecret' => true]) ?>"><?= Mage::helper('adminhtml')->__('Forgot your password?') ?></a>
-                        <input type="submit" class="form-button" value="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" />
+                    <div id="step2" class="no-display">
+                        <div class="input-box input-left">
+                            <label for="twofa_verification_code"><?= Mage::helper('adminhtml')->__('2FA verification code:') ?></label><br />
+                            <input type="text" id="twofa_verification_code" name="login[twofa_verification_code]" value="" class="required-entry input-text validate-number" autocomplete="one-time-code" disabled />
+                        </div>
+                        <div class="clear"></div>
+                        <div class="form-buttons">
+                            <a id="back-button" class="left" href="#"><?= Mage::helper('adminhtml')->__('Back') ?></a>
+                            <input type="submit" class="form-button" value="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" />
+                        </div>
                     </div>
                 </div>
                 <p class="legal">Powered by Maho</p>
             </form>
             <div class="bottom"></div>
-            <script type="text/javascript">
-                var loginForm = new varienForm('loginForm');
+            <script type="module">
+                history.replaceState(null, null, window.location.href);
+                const formEl = document.getElementById('loginForm');
+                const validator = new Validation(formEl);
+
+                formEl.addEventListener('submit', (event) => {
+                    event.preventDefault();
+                    if (!validator.validate()) {
+                        return;
+                    }
+                    if (document.getElementById('step1').classList.contains('no-display')) {
+                        formEl.submit();
+                    } else {
+                        gotoStep(2);
+                    }
+                });
+
+                document.getElementById('back-button').addEventListener('click', (event) => {
+                    event.preventDefault();
+                    gotoStep(1);
+                });
+
+                async function gotoStep(step) {
+                    if (step === 1) {
+                        document.getElementById('step1').classList.remove('no-display');
+                        document.getElementById('step2').classList.add('no-display');
+                        document.getElementById('twofa_verification_code').value = '';
+                        document.getElementById('twofa_verification_code').disabled = true;
+                    } else if (step === 2) {
+                        try {
+                            const ajaxUrl = "<?= $this->getUrl('adminhtml/index/prelogin', ['_query' => 'isAjax=1']) ?>";
+                            const response = await fetch(ajaxUrl, {
+                                method: 'POST',
+                                body: new FormData(formEl),
+                            });
+                            if (!response.ok) {
+                                throw new Error(
+                                    "<?= Mage::helper('adminhtml')->__('Network Error. Please refresh the page.') ?>"
+                                );
+                            }
+                            const result = await response.json();
+                            document.getElementById('messages').textContent = '';
+                            if (result.redirect) {
+                                window.location = result.redirect;
+                            } else if (result.error) {
+                                throw new Error(result.message);
+                            } else if (result.require_twofa) {
+                                document.getElementById('step1').classList.add('no-display');
+                                document.getElementById('step2').classList.remove('no-display');
+                                document.getElementById('twofa_verification_code').disabled = false;
+                                document.getElementById('twofa_verification_code').focus();
+                            } else {
+                                formEl.submit();
+                            }
+                        } catch (error) {
+                            document.getElementById('messages').textContent = error.message;
+                        }
+                    }
+                }
             </script>
         </div>
     </div>
